@@ -25,3 +25,7 @@ kotlin {
       }
    }
 }
+
+tasks.withType<Test>().configureEach {
+   jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
+}
